syntax = "proto3";

option go_package = "github.com/e-commerce-microservice/shopping-cart-service/gen;cartpb";

service ShoppingCartService {
    rpc CreateShoppingCart(CreateShoppingCartRequest) returns (CreateShoppingCartResponse);
    rpc AddItemToCart(AddItemToCartRequest) returns (AddItemToCartResponse);
}

message ShoppingCart {
    uint32 userID = 1;
}

message CreateShoppingCartRequest {
    uint32 userId = 1;
}
message CreateShoppingCartResponse {
    bool success = 1;
    uint32 cartId = 2;
}

message AddItemToCartRequest {
    uint32 cartId = 1;
    uint32 productId = 2;
    uint32 quantity = 3;
}

message AddItemToCartResponse {
    bool success = 1;
}